# xpdf

./: .gitignore  .gitmodules  CLAUDE.md  Cargo.toml  DOCUMENTATION_SUMMARY.md  PERFORMANCE.md  PERFORMANCE_SUMMARY.md  README.md  SESSION_SUMMARY.md  TAURI_TODO.md  WASM.md  WHATS_NEXT.md  package-lock.json
.cargo/: config.toml
benches/: parsing.rs
cli/: Cargo.toml
cli/src/: main.rs
docs/: async-http-loading.md  robustness-testing.md  usage-examples.md
examples/: basic_usage.rs  debug_pdf.rs  error_handling.rs  file_chunked_stream.rs  http_chunked_stream.rs  http_loading.rs  image_extraction.rs  pdf_inspection.rs  performance_benchmark.rs  progressive_loading.rs  read_pdf.rs  retry_pattern.rs  simple_text_extraction.rs  text_extraction.rs
pdf-x-core/: Cargo.toml
pdf-x-core/benches/: parsing.rs
pdf-x-core/examples/: render.rs  test_render_fix.rs
pdf-x-core/src/: lib.rs
pdf-x-core/src/core/: annotation.rs  async_http_chunked_stream.rs  chunk_manager.rs  cmap.rs  content_stream.rs  crypto.rs  decode.rs  delta.rs  document.rs  encoding.rs  encryption.rs  error.rs  file_chunked_stream.rs  font.rs  http_chunked_stream.rs  image.rs  lexer.rs  mod.rs  outline.rs  page.rs  parser.rs  pdf_writer.rs  retry.rs  stream.rs  sub_stream.rs  xref.rs
pdf-x-core/src/rendering/: context.rs  device.rs  font.rs  graphics_state.rs  mod.rs  path.rs  skia_device.rs  type1_font.rs
pdf-x-core/tests/: coordinate_transform_test.rs  create_test_pdf.rs  debug_mediabox.rs  debug_render_test.rs  debug_rendering_trace.rs  debug_transform.rs  delta_layer_tests.rs  image_rendering_test.rs  investigate_transform.rs  malformed_pdf_tests.rs  progressive_loading_tests.rs  property_tests.rs  rendering_analysis.rs  rendering_status.rs  rendering_tests.rs  test_text_orientation.rs  test_text_transform_fix.rs  test_transform_fix.rs  test_utils.rs  text_overlap_check.rs  transform_debug.rs  verify_text_rendering.rs  verify_vector_rendering.rs  visual_comprehensive.rs  visual_output.rs  visual_save.rs  visual_tests.rs
src/: lib.rs  main.rs
src/core/: base_stream.rs  cmap.rs  content_stream.rs  decode.rs  document.rs  error.rs  file_chunked_stream.rs  http_chunked_stream.rs  image.rs  lexer.rs  mod.rs  page.rs  parser.rs  retry.rs  stream.rs  xref.rs
tauri-app/: Cargo.toml  tauri.conf.json
tauri-app/src/: commands.rs  lib.rs  main.rs  state.rs  types.rs
tauri-app/ui/: index.html  package-lock.json  package.json
tauri-app/ui/src/: App.jsx
tauri-app/ui/src/components/: InspectorPanel.jsx  MainPanel.jsx  OutlineViewer.jsx
tauri-app/ui/src/styles/: main.css
tests/: QUICKSTART.md  README.md  STATUS.md  SUMMARY.md  document_tests.rs  integration_tests.rs  parser_tests.rs  progressive_loading_tests.rs  real_world_tests.rs  robustness.rs  stream_tests.rs  test_utils.rs  xref_tests.rs
tests/fixtures/: copy_test_pdfs.sh  generate_test_pdfs.py  test_manifest.json
