[package]
name = "pdf-x"
version = "0.1.0"
edition = "2024"
authors = ["PDF-X Contributors"]
description = "A Rust port of PDF.js with progressive loading support"
license = "Apache-2.0"

[[bin]]
name = "pdf-inspect"
path = "src/main.rs"

[dependencies]
# Async HTTP client for range requests
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream"], optional = true }

# Async runtime (for async network loading)
tokio = { version = "1.42", features = ["rt", "rt-multi-thread", "macros"], optional = true }

# Compression support for FlateDecode streams
flate2 = "1.0"

# Performance optimizations (WASM-compatible)
rustc-hash = "2.0"        # Fast hashing for integer keys (30% faster than std HashMap)
smallvec = "1.13"         # Inline small arrays to avoid heap allocations
lru = "0.12"              # LRU cache for bounded memory usage

# Font parsing (from hayro project)
hayro-font = { path = "./hayro/hayro-font" }  # CFF and Type1 font parser for text extraction

# Image decoding - follow hayro's specialized approach
# Use hayro's proven architecture with zune-jpeg for JPEG (DCTDecode)
zune-jpeg = { version = "0.5", optional = true }  # For JPEG (DCTDecode) - fast and SIMD-optimized
image = { version = "0.25", default-features = false, features = ["png"], optional = true }  # For PNG support

# Optional advanced image decoders (feature-gated)
# Use hayro's specialized decoders for complete format support
hayro-jpeg2000 = { path = "./hayro/hayro-jpeg2000", optional = true, default-features = false }  # For JPEG2000 (JpxDecode) - complete spec support
hayro-jbig2 = { path = "./hayro/hayro-jbig2", optional = true }      # For JBIG2 (Jbig2Decode) - document compression

[features]
default = ["jpeg-decoding"]
jpeg-decoding = ["zune-jpeg"]
png-decoding = ["image"]
advanced-image-formats = ["hayro-jpeg2000", "hayro-jbig2"]
async = ["reqwest", "tokio"]  # Enable async network loading

[dev-dependencies]
tempfile = "3.14"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "parsing"
harness = false

# Performance optimization profiles
[profile.release]
opt-level = 3              # Maximum optimizations
lto = "thin"              # Link-time optimization (thin for faster builds)
codegen-units = 1         # Single codegen unit for better optimization
strip = true              # Strip symbols for smaller binaries
panic = "abort"           # Smaller binary, faster panic handling

[profile.release-wasm]
inherits = "release"
opt-level = "z"           # Optimize for size (critical for WASM)
lto = true                # Full LTO for WASM
panic = "abort"           # WASM doesn't support unwinding

[profile.dev]
opt-level = 0             # Fast compilation for development

[profile.bench]
inherits = "release"
lto = false               # Faster benchmark compilation
