[workspace]
members = ["pdf-x-core", "cli", "tauri-app"]
exclude = ["hayro/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["PDF-X Contributors"]
license = "Apache-2.0"
repository = "https://github.com/your-org/pdf-x"

[workspace.dependencies]
# Shared dependencies for all workspace members
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"

# Performance optimizations
rustc-hash = "2.0"
smallvec = "1.13"
lru = "0.12"

# Compression
flate2 = "1.0"

# Async support
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream"] }
tokio = { version = "1.42", features = ["rt", "rt-multi-thread", "macros"] }

# Image decoding
zune-jpeg = { version = "0.5" }
image = { version = "0.25", default-features = false, features = ["png"] }

# Hayro workspace dependencies (for compatibility)
log = "0.4"
phf = { version = "0.13", features = ["macros"] }
bitflags = "2.9"
bytemuck = "1"
kurbo = "0.12"
resvg = "0.45.1"
once_cell = "1"
moxcms = "0.7.11"
siphasher = "1"
skrifa = "0.39.0"
yoke = "0.8"
pdf-writer = "0.14.0"
sitro = { git = "https://github.com/LaurenzV/sitro", rev = "fb804b3" }
xmlwriter = "0.1"
base64 = "0.22"
vello_cpu = { git = "https://github.com/linebender/vello", rev = "4ea47b4", default-features = false, features = ["std", "png", "u8_pipeline"] }
fast_image_resize = { version = "5", default-features = false }
fearless_simd = "0.3.0"

[workspace.lints]
rust.keyword_idents_2024 = "forbid"
rust.non_ascii_idents = "forbid"
rust.unsafe_op_in_unsafe_fn = "forbid"
rust.missing_docs = "warn"
rust.unused_extern_crates = "warn"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"

[profile.release-wasm]
inherits = "release"
opt-level = "z"
lto = true
panic = "abort"

[profile.dev]
opt-level = 0

[profile.bench]
inherits = "release"
lto = false
