[package]
name = "pdf-x-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "A Rust port of PDF.js with progressive loading support"

[dependencies]
# Workspace dependencies
rustc-hash = { workspace = true }
smallvec = { workspace = true }
lru = { workspace = true }
flate2 = { workspace = true }

# Optional dependencies
reqwest = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }

# Crypto dependencies (SHA-2 is optional, AES is now built-in)
sha2 = { version = "0.10", optional = true }

# Hayro dependencies (direct paths - they have their own workspace)
hayro-font = { path = "../hayro/hayro-font", default-features = false }

# Optional image decoding
zune-jpeg = { workspace = true, optional = true }
image = { workspace = true, optional = true }
hayro-jpeg2000 = { path = "../hayro/hayro-jpeg2000", optional = true, default-features = false }
hayro-jbig2 = { path = "../hayro/hayro-jbig2", optional = true, default-features = false }

# Rendering (optional for now, will become default later)
tiny-skia = { version = "0.11", optional = true }
rustybuzz = { version = "0.20", optional = true }
ttf-parser = { version = "0.25", optional = true }

[features]
default = ["jpeg-decoding"]
jpeg-decoding = ["zune-jpeg"]
png-decoding = ["image"]
advanced-image-formats = ["hayro-jpeg2000", "hayro-jbig2"]
async = ["reqwest", "tokio"]
crypto = ["sha2"]  # AES implementation is now built-in, only SHA-2 is external
rendering = ["tiny-skia", "rustybuzz", "ttf-parser"]  # Canvas rendering support

[dev-dependencies]
tempfile = "3.14"
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.5"

[[bench]]
name = "parsing"
harness = false

[[test]]
name = "rendering_tests"
path = "tests/rendering_tests.rs"
required-features = ["rendering"]

[[test]]
name = "render_pdf_example"
path = "tests/render_pdf_example.rs"
required-features = ["rendering"]

[[example]]
name = "render"
path = "examples/render.rs"
required-features = ["rendering"]
